--- a/foundation.html
+++ b/foundation.html
@@ -8,19 +8,19 @@
   </head>
   <body>
 
-<!-- Navigation -->
+<!-- Navi -->
 <div class="title-bar" data-responsive-toggle="realEstateMenu" data-hide-for="small">
   <button class="menu-icon" type="button" data-toggle></button>
   <div class="title-bar-title">Menu</div>
 </div>
 
-<div class="top-bar" id="realEstateMenu">
+<div class="top-bar" id="nav-links">
   <div class="top-bar-left">
     <ul class="menu" data-responsive-menu="accordion">
-      <li class="menu-text">Interplanetary</li>
-      <li><a href="#">One</a></li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
+      <li class="menu-text">COOKING WITH CLASS</li>
+      <li><a href="#">Your Cookbook</a></li>
+      <li><a href="#">Your Favorite Restaurants</a></li>
+      <!-- <li><a href="#">Three</a></li> -->
     </ul>
   </div>
   <div class="top-bar-right">
@@ -30,37 +30,37 @@
     </ul>
   </div>
 </div>
-<!-- /Navigation -->
+
 
 <br>
 
 <div class="row">
-
+<!-- main header -->
   <div class="medium-7 large-6 columns">
-    <h1>Close Your Eyes and Open Your Mind</h1>
-    <p class="subheader">There is beauty in space, and it is orderly. There is no weather, and there is regularity. It is predictable. Everything in space obeys the laws of physics. If you know these laws, and obey them, space will treat you kindly.</p>
-    <button class="button">Take a Tour</button>
-    <button class="button">Start a free trial</button>
+    <h1>To Cook or Not to Cook...</h1>
+    <p class="subheader">Trying to decide between opening your fridge and dining out? We've got you covered.</p>
+    <button class="button">Most Popular Recipes</button>
+    <button class="button">Best Restaurants Near You</button>
   </div>
 
   <div class="show-for-large large-3 columns">
     <img src="https://placehold.it/400x370&text=PSR1257 + 12 C" alt="picture of space">
   </div>
-
+  <!-- right aside searches -->
   <div class="medium-5 large-3 columns">
     <div class="callout secondary">
       <form>
         <div class="row">
           <div class="small-12 columns">
-            <label>Find Your Dream Planet
-              <input type="text" placeholder="Search destinations">
+            <label>Find The Perfect  Recipe
+              <input type="text" placeholder="Search Our Recipes">
             </label>
           </div>
           <div class="small-12 columns">
-            <label>Number of Moons
-              <input type="number" placeholder="Moons required">
+            <label>Dietary Restrictions? No Problem!
+              <input type="number" placeholder="Enter Allergies/Restrictions">
             </label>
-            <button type="submit" class="button">Search Now!</button>
+            <button type="submit" class="button">Let's Get Cookin'!</button>
           </div>
         </div>
       </form>
@@ -72,9 +72,9 @@
 <div class="row column">
   <hr>
 </div>
-
+<!-- 6 containers of favorites -->
 <div class="row column">
-  <p class="lead">Trending Planetary Destinations</p>
+  <p class="lead">Favorites</p>
 </div>
 
 <div class="row small-up-1 medium-up-2 large-up-3">
@@ -128,16 +128,17 @@
   </div>
 
 </div>
-
+<!-- button to expand and show more favorites -->
 <div class="row column">
   <a class="button hollow expanded">Load More</a>
 </div>
 
+<!-- footer with 4 diet preferences -->
 <footer>
   <div class="row expanded callout secondary">
 
     <div class="small-6 large-3 columns">
-      <p class="lead">Offices</p>
+      <p class="lead">We Love The Meat</p>
       <ul class="menu vertical">
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
@@ -147,7 +148,7 @@
     </div>
 
     <div class="small-6 large-3 columns">
-      <p class="lead">Solar Systems</p>
+      <p class="lead">Veggie Plz</p>
       <ul class="menu vertical">
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
@@ -157,17 +158,17 @@
     </div>
 
     <div class="small-6 large-3 columns">
-      <p class="lead">Contact</p>
+      <p class="lead">Pescetarian</p>
       <ul class="menu vertical">
-        <li><a href="#"><i class="fi-social-twitter"></i> Twitter</a></li>
-        <li><a href="#"><i class="fi-social-facebook"></i> Facebook</a></li>
-        <li><a href="#"><i class="fi-social-instagram"></i> Instagram</a></li>
-        <li><a href="#"><i class="fi-social-pinterest"></i> Pinterest</a></li>
-      </ul>
+        <li><a href="#">One</a></li>
+        <li><a href="#">Two</a></li>
+        <li><a href="#">Three</a></li>
+        <li><a href="#">Four</a></li>
+             </ul>
     </div>
 
     <div class="small-6 large-3 columns">
-      <p class="lead">Offices</p>
+      <p class="lead">Vegan</p>
       <ul class="menu vertical">
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
@@ -202,4 +203,4 @@
       $(document).foundation();
     </script>
   </body>
-</html> weeeee
+</htm>
