added Maryia's changes and moved the updated html and javascript into the correct files

--- a/BULMA.WORK/updatedmainpg.html
+++ b/BULMA.WORK/updatedmainpg.html
@@ -202,72 +202,74 @@
     <!-- first row -->
     <div class="tile is-ancestor">
         <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="subtitle">Name of Dish</p>
-            <button class="button is-small is-primary is-rounded" id="recipe-save-1">Save To My Recipes</button>
-          </article>
+            <article class="tile is-child box">
+                <p class="subtitle">Name of Dish</p>
+                <button class="button is-small is-primary is-rounded" id="recipe-save-1">Save To My Recipes</button>
+            </article>
         </div>
 
         <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="subtitle">Name of Dish</p>
-            <button class="button is-small is-primary is-rounded" id="recipe-save-2">Save To My Recipes</button>
-          </article>
+            <article class="tile is-child box">
+                <p class="subtitle">Name of Dish</p>
+                <button class="button is-small is-primary is-rounded" id="recipe-save-2">Save To My Recipes</button>
+            </article>
         </div>
 
         <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="subtitle">Name of Dish</p>
-            <button class="button is-small is-primary is-rounded" id="recipe-save-3">Save To My Recipes</button>
-            <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
-            </div>
-          </article>
+            <article class="tile is-child box">
+                <p class="subtitle">Name of Dish</p>
+                <button class="button is-small is-primary is-rounded" id="recipe-save-3">Save To My Recipes</button>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque
+                        tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+                </div>
+            </article>
         </div>
-      </div>
+    </div>
 
-      <!-- second row -->
-      <div class="tile is-ancestor">
+    <!-- second row -->
+    <div class="tile is-ancestor">
         <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="subtitle">Name of Dish</p>
-            <button class="button is-small is-primary is-rounded" id="recipe-save-4">Save To My Recipes</button>
-          </article>
-        </div>
-
-        <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="subtitle">Name of Dish</p>
-            <button class="button is-small is-primary is-rounded" id="recipe-save-5">Save To My Recipes</button>
-          </article>
+            <article class="tile is-child box">
+                <p class="subtitle">Name of Dish</p>
+                <button class="button is-small is-primary is-rounded" id="recipe-save-4">Save To My Recipes</button>
+            </article>
         </div>
 
         <div class="tile is-parent">
-          <article class="tile is-child box">
-             <p class="subtitle">Name of Dish</p>
-            <button class="button is-small is-primary is-rounded" id="recipe-save-6">Save To My Recipes</button>
-            <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
-            </div>
-          </article>
+            <article class="tile is-child box">
+                <p class="subtitle">Name of Dish</p>
+                <button class="button is-small is-primary is-rounded" id="recipe-save-5">Save To My Recipes</button>
+            </article>
         </div>
-      </div>
-    
+
+        <div class="tile is-parent">
+            <article class="tile is-child box">
+                <p class="subtitle">Name of Dish</p>
+                <button class="button is-small is-primary is-rounded" id="recipe-save-6">Save To My Recipes</button>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque
+                        tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+                </div>
+            </article>
+        </div>
+    </div>
+
     <footer>
 
     </footer>
 
-    <section class="section" id = "map-holder">
+    <section class="section" id="map-holder">
         <div class="container">
-          <div class="content has-text-centered">
-              <article class="notification media has-background-white">
-                <figure class="media-center">
-                </figure>
-            </article>
-        
-      </div>
-    </div>
-  </section>
+            <div class="content has-text-centered">
+                <article class="notification media has-background-white">
+                    <figure class="media-center">
+                    </figure>
+                </article>
+
+            </div>
+        </div>
+    </section>
 
 
 
@@ -276,7 +278,7 @@
     HERE BE MODALS
     ===============  -->
     <!-- 3dFlipVertical card tiny -->
- 
+
     <!-- end tiny modal card -->
     <!-- Image modal -->
     <div id="modal-image2" class="modal modal-fx-3dSlit">
@@ -325,6 +327,7 @@
             OverlayScrollbars(document.querySelectorAll("body"), {});
         });
     </script>
+    <script src="./updatedmainjava.js"></script>
 </body>
 
 </html>
