ajusted seach button color

--- a/BULMA.WORK/updatedmainpg.html
+++ b/BULMA.WORK/updatedmainpg.html
@@ -46,9 +46,7 @@
                         <input class="input" id="search" type="text" placeholder="Search for Recipes">
                     </p>
                     <p class="control">
-                        <button class="button">
-                            Search
-                        </button>
+                        <button class="button is-danger is-outlined">Search</button>
                     </p>
                 </div>
             </div>
@@ -64,13 +62,11 @@
                 <div class="level-item">
                     <div class="field has-addons">
                         <p class="control">
-                            <a href="#map-holder"><input class="input" type="text"
+                            <a href="#map-holder"><input class="input" input-color = "$grey-darker" type="text"
                                     placeholder="Restaurants Near You"></a>
                         </p>
                         <p class="control">
-                            <button class="button">
-                                Search
-                            </button>
+                            <button class="button is-danger is-outlined">Search</button>
                         </p>
                     </div>
                 </div>
@@ -98,7 +94,7 @@
     </section>
 
 
-    <!-- <Right side --> -->
+    <!-- <Right side --> 
     <div class="box cta">
         <div class="level-right">
 
