added submit button for dropdown

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<input class="input" id="search" type="text" placeholder="Search for Recipes">
 					</p>
 					<p class="control">
-						<button class="button" id="search-btn">
+						<button class="button is-danger is-outlined" id="search-btn">  
 							Search
 						</button>
 					</p>
@@ -68,7 +68,7 @@
 									id="google-search-bar"></a>
 						</p>
 						<p class="control">
-							<a href="#map-holder"><button class="button" id="search-google-btn">
+							<a href="#map-holder"><button class="button is-danger is-outlined" id="search-google-btn">
 									Search
 								</button></a>
 						</p>
@@ -98,7 +98,7 @@
 	</section>
 
 
-	<!-- <Right side --> -->
+	<!-- <Right side --> 
 	<div class="box cta">
 		<div class="level-right">
 
@@ -165,6 +165,11 @@
 							<input type="checkbox" id="intolerance12" name="intolerance12" value="wheat">
 							<label for="intolerance12"> Wheat</label>
 						</div>
+
+						<div class="box has-text-centered">
+							<button class=" button is-success">See Recipes</button>
+						  </div>
+						
 					</div>
 				</div>
 			</div>
