--- a/recipes.html
+++ b/recipes.html
@@ -22,10 +22,10 @@
   </nav>
 
   <!-- END NAV -->
-  <div class="container" id="recipe-container">
+  <div class="container">
     <div class="columns">
 
-      <div class="column is-9">
+      <div class="column is-9" id="recipe-container">
         <section class="hero is-info welcome is-small">
           <div class="hero-body">
             <div class="container">
