--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 						</div>
 
 						<div class="box has-text-centered">
-							<button class=" button is-success">See Recipes</button>
+							<button class=" button is-success" id="see-recipe-btn">See Recipes</button>
 						  </div>
 						
 					</div>
