addended title and subtitle, added background header img, and added an on-click disabled function

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<!-- practice -->
 	<link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
 	<link rel="stylesheet" type="text/css" href="../css/hero.css">
+	<link rel = "stylesheet" href = "./assets/style.css">
 	<link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
 	<style>
 		.columns:nth-child(2) {
@@ -80,18 +81,16 @@
 
 
 
-
-
 <body>
 	<section class="hero is-info is-small">
-		<div class="hero-body">
+		<div class="hero-body" id = "header-pic">
 			<div class="container has-text-centered">
-				<p class="title">
-					To Cook Or Not To Cook
+				<p class="title" id = "main-title" style="color:black" style = "background-color: white;">
+					<span>To Cook Or Not To Cook</span>
 				</p>
-				<p class="subtitle">
-					Trying to decide between opening your fridge and dining out? We've got you
-					covered.
+				<p class="subtitle"  style="color: black" style =  "background-color: white">
+					<span>Trying to decide between opening your fridge and dining out? We've got you
+					covered.</span>
 				</p>
 			</div>
 		</div>
@@ -185,7 +184,7 @@
 			<article class="tile is-child box">
 				<p><img id="card-0-img"></p>
 				<p class="subtitle" id="card-0-title"></p>
-				<button class="button is-small is-primary is-rounded" id="recipe-save-1">Save To My Recipes</button>
+				<button class="button is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
 			</article>
 		</div>
 
@@ -193,7 +192,7 @@
 			<article class="tile is-child box">
 				<p><img id="card-1-img"></p>
 				<p class="subtitle" id="card-1-title"></p>
-				<button class="button is-small is-primary is-rounded" id="recipe-save-2">Save To My Recipes</button>
+				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-2">Save To My Recipes</button>
 			</article>
 		</div>
 
@@ -201,7 +200,7 @@
 			<article class="tile is-child box">
 				<p><img id="card-2-img"></p>
 				<p class="subtitle" id="card-2-title"></p>
-				<button class="button is-small is-primary is-rounded" id="recipe-save-3">Save To My Recipes</button>
+				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-3">Save To My Recipes</button>
 				<div class="content">
 
 				</div>
@@ -215,7 +214,7 @@
 			<article class="tile is-child box">
 				<p><img id="card-3-img"></p>
 				<p class="subtitle" id="card-3-title"></p>
-				<button class="button is-small is-primary is-rounded" id="recipe-save-4">Save To My Recipes</button>
+				<button class="button is-small is-info is-focused is-rounded" id="recipe-save-4">Save To My Recipes</button>
 			</article>
 		</div>
 
@@ -223,7 +222,7 @@
 			<article class="tile is-child box">
 				<p><img id="card-4-img"></p>
 				<p class="subtitle" id="card-4-title"></p>
-				<button class="button is-small is-primary is-rounded" id="recipe-save-5">Save To My Recipes</button>
+				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-5">Save To My Recipes</button>
 			</article>
 		</div>
 
@@ -231,7 +230,7 @@
 			<article class="tile is-child box">
 				<p><img id="card-5-img"></p>
 				<p class="subtitle" id="card-5-title"></p>
-				<button class="button is-small is-primary is-rounded" id="recipe-save-6">Save To My Recipes</button>
+				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-6">Save To My Recipes</button>
 				<div class="content">
 
 				</div>
