--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 	<link rel="stylesheet" href="./assets/dropdownstyle.css">
 	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/style3.css">
 </head>
 
 <body>
@@ -146,42 +147,42 @@
 		<div class="row small-up-1 medium-up-2 large-up-3">
 			<div class="column">
 				<div class="callout">
-					<p><img id="card-0-img"></p>
+					<p><img id="card-0-img" alt="Picture of Recipe"></p>
 					<p class="lead" id="card-0-title"></p>
-					<button class="button" id="recipe-save-1">Save to My Recipes</button>
+					<button class="button" id="recipe-save-1" alt="Save Button">Save to My Recipes</button>
 				</div>
 			</div>
 			<div class="column">
 				<div class="callout">
-					<p><img id="card-1-img"></p>
+					<p><img id="card-1-img"alt="Picture of Recipe"></p>
 					<p class="lead" id="card-1-title"></p>
-					<button class="button" id="recipe-save-2">Save to My Recipes</button>
+					<button class="button" id="recipe-save-2" alt="Save Button">Save to My Recipes</button>
 				</div>
 			</div>
 			<div class="column">
 				<div class="callout">
-					<p><img id="card-2-img"></p>
+					<p><img id="card-2-img" alt="Picture of Recipe"></p>
 					<p class="lead" id="card-2-title"></p>
-					<button class="button" id="recipe-save-3">Save to My Recipes</button>
+					<button class="button" id="recipe-save-3" alt="Save Button">Save to My Recipes</button>
 				</div>
 			</div>
 			<div class="column">
 				<div class="callout">
-					<p><img id="card-3-img"></p>
+					<p><img id="card-3-img" alt="Picture of Recipe"></p>
 					<p class="lead" id="card-3-title"></p>
-					<button class="button" id="recipe-save-4">Save to My Recipes</button>
+					<button class="button" id="recipe-save-4" alt="Save Button">Save to My Recipes</button>
 				</div>
 			</div>
 			<div class="column">
 				<div class="callout">
-					<p><img id="card-4-img"></p>
+					<p><img id="card-4-img" alt="Picture of Recipe"></p>
 					<p class="lead" id="card-4-title"></p>
-					<button class="button" id="recipe-save-5">Save to My Recipes</button>
+					<button class="button" id="recipe-save-5" alt="Save Button">Save to My Recipes</button>
 				</div>
 			</div>
 			<div class="column">
 				<div class="callout">
-					<p><img id="card-5-img"></p>
+					<p><img id="card-5-img" alt="Picture of Recipe"></p>
 					<p class="lead" id="card-5-title"></p>
 					<button class="button" id="recipe-save-6">Save to My Recipes</button>
 				</div>
@@ -190,7 +191,7 @@
 		</div>
 
 
-		<footer id="map-holder" class="small-12 columns">
+		<footer id="map-holder" class="small-12 columns" alt="map of favortie Restaurants locations">
 
 		</footer>
 
