made it so you can sort by favorite. Also reworked how it determines if a recipe was already saved or not

--- a/recipes.html
+++ b/recipes.html
@@ -93,9 +93,9 @@
       <div class="column is-3 sider">
         <aside class="menu is-hidden-mobile">
           <ul class="menu-list">
-            <li><button><a>Your favorits</a></button></li>
-            <li><button><a>Your Recipes</a></button></li>
-            <li><button class="create-new-recipe-btn"><a>Creat New Recipe</a></button></li>
+            <li><button id="sort-by-favorite-btn"><a>Your favorites</a></button></li>
+            <li><button id="sort-by-created-btn"><a>Your Recipes</a></button></li>
+            <li><button class="create-new-recipe-btn"><a>Create New Recipe</a></button></li>
             <br></br>
             <br></br>
 
