--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/hero.css">
 	<link rel = "stylesheet" href = "./assets/style.css">
 	<link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
+	<link rel="stylesheet" href="./assets/style3.css">
 	<style>
 		.columns:nth-child(2) {
 			margin-top: -10rem;
@@ -56,49 +57,6 @@
 		</div>
 
 
-<<<<<<< HEAD
-		<div class="row small-up-1 medium-up-2 large-up-3">
-			<div class="column">
-				<div class="callout">
-					<p><img id="card-0-img" alt="Picture of Recipe"></p>
-					<p class="lead" id="card-0-title"></p>
-					<button class="button" id="recipe-save-1" alt="Save Button">Save to My Recipes</button>
-				</div>
-			</div>
-			<div class="column">
-				<div class="callout">
-					<p><img id="card-1-img"alt="Picture of Recipe"></p>
-					<p class="lead" id="card-1-title"></p>
-					<button class="button" id="recipe-save-2" alt="Save Button">Save to My Recipes</button>
-				</div>
-			</div>
-			<div class="column">
-				<div class="callout">
-					<p><img id="card-2-img" alt="Picture of Recipe"></p>
-					<p class="lead" id="card-2-title"></p>
-					<button class="button" id="recipe-save-3" alt="Save Button">Save to My Recipes</button>
-				</div>
-			</div>
-			<div class="column">
-				<div class="callout">
-					<p><img id="card-3-img" alt="Picture of Recipe"></p>
-					<p class="lead" id="card-3-title"></p>
-					<button class="button" id="recipe-save-4" alt="Save Button">Save to My Recipes</button>
-				</div>
-			</div>
-			<div class="column">
-				<div class="callout">
-					<p><img id="card-4-img" alt="Picture of Recipe"></p>
-					<p class="lead" id="card-4-title"></p>
-					<button class="button" id="recipe-save-5" alt="Save Button">Save to My Recipes</button>
-				</div>
-			</div>
-			<div class="column">
-				<div class="callout">
-					<p><img id="card-5-img" alt="Picture of Recipe"></p>
-					<p class="lead" id="card-5-title"></p>
-					<button class="button" id="recipe-save-6">Save to My Recipes</button>
-=======
 		<!-- Main container -->
 		<nav class="level">
 			<!-- Left side -->
@@ -220,67 +178,38 @@
 	</div>
 	</div>
 
-
-	<!-- first row -->
-	<div class="tile is-ancestor">
-		<div class="tile is-parent">
-			<article class="tile is-child box">
-				<p><img id="card-0-img"></p>
-				<p class="subtitle" id="card-0-title"></p>
-				<button class="button is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
-			</article>
-		</div>
-
-		<div class="tile is-parent">
-			<article class="tile is-child box">
-				<p><img id="card-1-img"></p>
-				<p class="subtitle" id="card-1-title"></p>
-				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-2">Save To My Recipes</button>
-			</article>
-		</div>
-
-		<div class="tile is-parent">
-			<article class="tile is-child box">
-				<p><img id="card-2-img"></p>
-				<p class="subtitle" id="card-2-title"></p>
-				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-3">Save To My Recipes</button>
-				<div class="content">
-
->>>>>>> fdd89ee4be58db108bd37f294ab475be9613df90
-				</div>
-			</article>
-		</div>
-	</div>
-
-	<!-- second row -->
-	<div class="tile is-ancestor">
-		<div class="tile is-parent">
-			<article class="tile is-child box">
-				<p><img id="card-3-img"></p>
-				<p class="subtitle" id="card-3-title"></p>
-				<button class="button is-small is-info is-focused is-rounded" id="recipe-save-4">Save To My Recipes</button>
-			</article>
-		</div>
-
-		<div class="tile is-parent">
-			<article class="tile is-child box">
-				<p><img id="card-4-img"></p>
-				<p class="subtitle" id="card-4-title"></p>
-				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-5">Save To My Recipes</button>
-			</article>
-		</div>
-
-		<div class="tile is-parent">
-			<article class="tile is-child box">
-				<p><img id="card-5-img"></p>
-				<p class="subtitle" id="card-5-title"></p>
-				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-6">Save To My Recipes</button>
-				<div class="content">
-
-				</div>
-			</article>
-		</div>
-	</div>
+<!-- Recipie cards -->
+	<container>
+        <div class="card">
+            <div id="card-0-title">Title</div>
+            <img id="card-0-img"></a>
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
+        </div>
+        <div class="card">
+            <div id="card-1-title">Title</div>
+            <img id="card-1-img"></a>
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
+        </div>
+        <div class="card">
+            <div id="card-2-title">Title</div>
+            <img id="card-2-img">
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
+        </div>
+        <div class="card">
+            <div id="card-3-title">Title</div>
+            <img id="card-3-img">
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
+        </div>
+        <div class="card">
+            <div id="card-4-title">Title</div>
+            <img id="card-4-img" >
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
+        </div>
+        <div class="card">
+            <div id="card-5-title">Title</div>
+            <img id="card-5-img">
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
+        </div>
 
 	<footer>
 
