--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 			<article class="tile is-child box">
 				<p><img id="card-5-img"></p>
 				<p class="subtitle" id="card-5-title"></p>
-				<button class="button is-small  is-info is-focused is-rounded" id="recipe-save-6">Save To My Recipes</button>
+				<button class="button is-small is-info is-rounded" id="recipe-save-6">Save To My Recipes</button>
 				<div class="content">
 
 				</div>
