addended card color from yellow to gray

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </section>
-1:02
+
 <!-- <Right side -->
     <div class="box cta">
         <div class="level-right">
@@ -179,7 +179,7 @@
         <div class="card">
             <div id="card-3-title">Title</div>
             <img id="card-3-img">
-1:03
+
 <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
         </div>
         <div class="card">
@@ -192,18 +192,18 @@
             <img id="card-5-img">
             <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My Recipes</button>
         </div>
-    <footer>
+
+		<footer class="section" id="map-holder">
+			<div class="container">
+				<div class="content has-text-centered">
+					<article class="notification media has-background-white">
+						<figure class="media-center">
+						</figure>
+					</article>
+				</div>
+			</div>
     </footer>
-    <section class="section" id="map-holder">
-        <div class="container">
-            <div class="content has-text-centered">
-                <article class="notification media has-background-white">
-                    <figure class="media-center">
-                    </figure>
-                </article>
-            </div>
-        </div>
-    </section>
+
     <!--  ===============
     HERE BE MODALS
     ===============  -->
