--- a/recipes.html
+++ b/recipes.html
@@ -37,57 +37,6 @@
 
           <div class="columns recipe-container">
 
-            <!-- <div class=" column is-6">
-              <div class="card">
-                <header class="card-header">
-                  <p class="card-header-title" contenteditable="true">
-                    Your recipe
-                  </p>
-                </header>
-                <div class="card-content">
-                  <div class="content">
-                    <p>Ingredients:</p>
-                    <div class="control has-icons-left has-icons-right ingredients">
-                      <div class="text-input-for-recipe" contenteditable="true">enter Ingredients</div>
-
-                    </div>
-                    <p>How to cook</p>
-                    <div class="control has-icons-left has-icons-right directions">
-                      <div class="text-input-for-recipe" contenteditable="true">Directions</div>
-                      <button class="button save-recipe"><i>Save</i></button>
-                      <button class="button favorite-btn"><i>Mark as Favorite</i></button>
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="column is-6">
-              <div class="card">
-                <header class="card-header">
-                  <p class="card-header-title">
-                    Your recipe
-                  </p>
-                </header>
-                <div class="card-content">
-                  <div class="content">
-                    <p>Ingredients:</p>
-                    <div class="control has-icons-left has-icons-right">
-                      <input class="input is-large" type="text" placeholder="">
-
-                    </div>
-                    <p>How to cook</p>
-                    <div class="control has-icons-left has-icons-right">
-                      <input class="input is-large" type="text" placeholder="">
-                      <button class="button"><i>Save</i></button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-
           </div>
       </div>
       <div class="column is-3 sider">
@@ -101,14 +50,12 @@
 
             <li><button id="go-back-button"><a>Go back</a></button></li>
           </ul>
-
         </aside>
       </div>
-
     </div>
 
     <div class="footer">
-      <button><i class="fa fa-plus fa-30x create-new-recipe-btn"></i></button>
+      <button class = "fa fa-60x"><i class="fa fa-plus fa-6x create-new-recipe-btn"></i></button>
     </div>
 
   </div>
