fixed the placeholder text for the titile of recipes, and show the buttons on the recipe page on mobile

--- a/recipes.html
+++ b/recipes.html
@@ -40,7 +40,7 @@
           </div>
       </div>
       <div class="column is-3 sider">
-        <aside class="menu is-hidden-mobile">
+        <aside class="menu">
           <ul class="menu-list">
             <li><button id="sort-by-favorite-btn"><a>Your favorites</a></button></li>
             <li><button id="sort-by-created-btn"><a>Your Recipes</a></button></li>
@@ -55,7 +55,7 @@
     </div>
 
     <div class="footer">
-      <button class = "fa fa-60x"><i class="fa fa-plus fa-6x create-new-recipe-btn"></i></button>
+      <button class="fa fa-60x"><i class="fa fa-plus fa-6x create-new-recipe-btn"></i></button>
     </div>
 
   </div>
