--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <input type="checkbox" id="intolerance12" name="intolerance12" value="wheat">
                             <label for="intolerance12"> Wheat</label>
                         </div>
-                        <div class="box has-text-centered">
+                        <div class="box has-text-centered" id="checkbox-search-box">
                             <button class=" button is-success" id="see-recipe-btn">See Recipes</button>
                         </div>
                     </div>
@@ -171,32 +171,32 @@
         <div class="card">
             <div id="card-1-title">Title</div>
             <img id="card-1-img"></a>
-            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-2">Save To My
                 Recipes</button>
         </div>
         <div class="card">
             <div id="card-2-title">Title</div>
             <img id="card-2-img">
-            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-3">Save To My
                 Recipes</button>
         </div>
         <div class="card">
             <div id="card-3-title">Title</div>
             <img id="card-3-img">
 
-            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-4">Save To My
                 Recipes</button>
         </div>
         <div class="card">
             <div id="card-4-title">Title</div>
             <img id="card-4-img">
-            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-5">Save To My
                 Recipes</button>
         </div>
         <div class="card">
             <div id="card-5-title">Title</div>
             <img id="card-5-img">
-            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-1">Save To My
+            <button class="buttoncard is-small is-info is-focused is-rounded" id="recipe-save-6">Save To My
                 Recipes</button>
         </div>
 
