updated README, card color to gray, moved green button in drop down, adjusted title of page

--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
                             <input type="checkbox" id="intolerance12" name="intolerance12" value="wheat">
                             <label for="intolerance12"> Wheat</label>
                         </div>
-                        <div class="box has-text-centered">
-                            <button class=" button is-success" id="see-recipe-btn">See Recipes</button>
-                        </div>
+                        <hr class="dropdown-divider">
+                            <a href="#" class="dropdown-item">
+                                <button class=" button is-success" id="see-recipe-btn">See Recipes</button>
+                             </a>
                     </div>
                 </div>
             </div>
