--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="hero-body" id="header-pic">
             <div class="container has-text-centered">
                 <p class="title" id="main-title" style="color:black" style="background-color: white;">
-                    <span>To Cook Or Not To Cook</span>
+                    <span><i>TO COOK OR NOT TO COOK</i></span>
                 </p>
                 <p class="subtitle" style="color: black" style="background-color: white">
                     <span>Trying to decide between opening your fridge and dining out? We've got you
