moved the title slightly lower

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">
-    <title>Modal Cards - Free Bulma template</title>
+    <title>To Cook or Not To Cook</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet'
         href='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/css/OverlayScrollbars.min.css'>
@@ -152,9 +152,9 @@
                         </div>
 
                         <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                <button class=" button is-success" id="see-recipe-btn">See Recipes</button>
-                             </a>
+                        <a href="#" class="dropdown-item">
+                            <button class=" button is-success" id="see-recipe-btn">See Recipes</button>
+                        </a>
 
                     </div>
                 </div>
