broke the javascript file into two files based on what page the user is looking at. Also created a recipe class and test file fore it

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 OverlayScrollbars(document.querySelectorAll("body"), {});
             });
         </script>
-        <script src="./assets/java.js"></script>
+        <script src="./assets/landingHTML.js"></script>
 </body>
 
 </html>
